--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 .header {
-  z-index: 1;
+  z-index: 2;
 
   position: fixed;
   top: 0;
